feat/ implement login, logout, signup, remove #1
