# src/handler/student.ts
@@ -1,28 +1,20 @@
-import { NextFunction, Request, Response } from "express";
+import { NextFunction, Response } from "express";
 import bcrypt from 'bcrypt';
+import User from "../model/user";
 import Student from "../model/student";
 import ExpressError from "../helper/ExpressError";
-import StudentService from '../service/student'
-import jwt from "jsonwebtoken";
+import { sign } from '../service/student'
 import Config from "../config";
 import StudentJoiSchema from "../schema/student"
 import sequelize from "../model/database";
-import User from "../model/user";
+import Request from "../@types/express"
+import LoggedJwt from "../model/logged_jwt";
 
 
 
-declare global {
-	namespace Express {
-		export interface Request {
-			student_username?: string;
-		}
-	}
-}
-
-
-// [POST] /signup
-const signup = async (req: Request, res: Response): Promise<void> => {
-	const student = await StudentJoiSchema.validateAsync(req.body);
+// [POST] /students
+const signup = async (req: Request, res: Response, next: NextFunction): Promise<any> => {
+	const student = (await StudentJoiSchema.validateAsync(req.body)).student;
 
 	const needs_hashing = student.student_password + Config.bcrypt_pepper;
 	student.hashed_password = await bcrypt.hashSync(needs_hashing, Config.salt_rounds)
@@ -40,16 +32,30 @@ const signup = async (req: Request, res: Response): Promise<void> => {
 		delete student['m_name'];
 		delete student['l_name'];
 
-		const result = await Student.create(student);
+		const result = await Student.create(student, {transaction});
+		await transaction.commit();
 	}
 	catch(e: unknown){
 		await transaction.rollback();
 		throw e;
 	}
 	
-
-	const AccessToken = await StudentService.sign(student.student_username);
+	const AccessToken = await sign(student.student_username);
 	res.status(201).send({ AccessToken });
+};
+
+
+const remove = async (req: Request, res: Response, next: NextFunction): Promise<any> => {
+	const { student_username } = req.params;
+
+	if(req.student_username != student_username){
+		throw new ExpressError("Unauthorized Request", 403);
+	}
+
+	const result = await Student.destroy({where: {student_username}});
+
+	if (result != 1) throw new ExpressError("User not found", 404);
+	res.status(200).send({ msg: "Student removed successfully" });
 };
 
 
@@ -61,43 +67,40 @@ const login = async (req: Request, res: Response): Promise<void> => {
 
 	const needs_hashing = student_password + Config.bcrypt_pepper;
 
-	const student = await Student.findOne({where: student_username});
+	const student = await Student.findByPk(student_username);
 
-	if (!student) throw new ExpressError("Student Not Found", 404);
+	if (!student) throw new ExpressError('Wrong username or password', 403);
 
 	const password_comparison = await bcrypt.compareSync(needs_hashing, student.getDataValue("hashed_password"))
 
-	if (!password_comparison) throw new ExpressError('Wrong username or password', 403)
+	if (!password_comparison) throw new ExpressError('Wrong username or password', 403);
 
-	const AccessToken = await StudentService.sign(student_username);
+	const AccessToken = await sign(student_username);
 	res.send({ AccessToken });
 };
 
 
+// [POST] /logout
+const logout = async (req: Request, res: Response): Promise<void> => {
+	if (!req.headers.authorization) throw new ExpressError("Unauthorized, please login first", 401)
+	const token = req.headers.authorization?.split(' ')[1];
 
-// const isAuthenticated = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-// 	if (!req.headers.authorization || req.headers.authorization.split(' ').length !== 2) throw new ExpressError("Unauthorized, Please Login", 403);
+	await LoggedJwt.destroy({ where: { token } });
+	if (req.student_username) delete req["student_username"];
 
-// 	const token = req.headers.authorization.split(' ')[1];
+	res.status(200).send({ msg: "Logged out successfully" });
+};
 
-// 	let jwt_payload: { student_username: string; iat: number; exp: number };
-// 	try {
-// 		jwt_payload = (await jwt.verify(token, Config.access_token_secret)) as unknown as { student_username: string; iat: number; exp: number; };
-// 	}
-// 	catch (e) {
-// 		// @ts-ignore
-// 		throw new ExpressError(e.message + ', Please log in again', 403)
-// 	}
-// 	req.student_username = jwt_payload.student_username;
 
-// 	return next();
-// }
+
+
 
 
 export default {
 	signup,
 	login,
-	// isAuthenticated
+	logout,
+	remove
 };
 
 
